--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,16 @@
 // primary
-$basic-background:   #060707 !default;
-$element-background: #0c0f0e !default;
-$basic-plate:        #101414 !default;
-$part-plate:         #1e2423 !default;
-$basic-btn:          #253330 !default;
-$btn-hover:          #0a2420 !default;
-$tittle-word:        #136c5e !default;
+$basic-background:          #060707 !default;
+$element-background:        #0c0f0e !default;
+$basic-plate:               #101414 !default;
+$part-plate:                #1e2423 !default;
+$basic-btn:                 #253330 !default;
+$btn-hover:                 #0a2420 !default;
+$tittle-word:               #136c5e !default;
 // 渐变色
-$button:             #252b23 !default;
-$high-light-area:    #f9c152 !default;
-$new-data:           #241F0C !default;
+$button:                    #252b23 !default;
+$high-light-area-top:       #F38A00 !default;
+$high-light-area-bottom:    #F9C152 !default;
+$new-data:                  #241F0C !default;
 
 // ----------------------------------------------------------------
 
@@ -19,6 +20,7 @@ $words-high-light:   #F9C152 !default;
 $words-supporting:   #8F9598 !default;
 $words-disable:      #4A4D4C !default;
 $words-title:        #136C5E !default;
+$words-black:        #000000 !default;
 
 
 // ----------------------------------------------------------------
@@ -163,7 +165,9 @@ $btn-line-height:             $line-height-base !default;
 
 // 按钮颜色
 
-// normal
+// ----------------------------------------------------------------
+
+// type - normal
 $btn-background-normal-top:      #213D38 !default;
 $btn-background-normal-bottom:   #18302C !default;
 
@@ -173,26 +177,23 @@ $btn-background-hover:           #0A2420 !default;
 // active
 $btn-background-active:          #1E2423 !default;
 
-// focus
-$btn-color-focus:                $words-high-light !default;
-$btn-background-focus:           linear-gradient($btn-background-normal-top, $btn-background-normal-bottom) !default;
+// ----------------------------------------------------------------
 
+// type - primary
+$btn-background-primary:         #253330 !default;
 
-// //不同大小按钮的 padding 和 font size
-// $btn-padding-y-sm:            .25rem !default;
-// $btn-padding-x-sm:            .5rem !default;
-// $btn-font-size-sm:            $font-size-sm !default;
+// hover
+$btn-background-primary-hover:   $btn-background-hover !default;
 
-// $btn-padding-y-lg:            .5rem !default;
-// $btn-padding-x-lg:            1rem !default;
-// $btn-font-size-lg:            $font-size-lg !default;
+// active
+$btn-background-primary-active:  $btn-background-active !default;
 
-// // 按钮边框
-$btn-border-width:            $border-width !default;
+// ----------------------------------------------------------------
 
-// // 按钮其他
-// $btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
-// $btn-disabled-opacity:        .65 !default;
+// 按钮边框
+$btn-border-width:               $border-width !default;
+
+// ----------------------------------------------------------------
 
 // // 链接按钮
 // $btn-link-color:              $link-color !default;
