feat: dev component -> button -> lead type

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -190,6 +190,14 @@ $btn-background-primary-active:  $btn-background-active !default;
 
 // ----------------------------------------------------------------
 
+// type - lead
+
+$btn-padding-lead-y:               0px !default;
+$btn-padding-lead-left:            9px !default;
+$btn-padding-lead-right:           6px !default;
+
+// ----------------------------------------------------------------
+
 // 按钮边框
 $btn-border-width:               $border-width !default;
 
