--- a/src/components/button/_style.scss
+++ b/src/components/button/_style.scss
@@ -36,6 +36,12 @@
   }
 }
 
+.btn-loading .ant-btn-loading-icon {
+  margin-right: 4px;
+}
+
+// primary
+
 .btn-primary {
   @include button-style(
     $btn-background-primary,
@@ -59,6 +65,41 @@
   &.btn-work-high-light {
     color: $words-black;
     background: linear-gradient($high-light-area-top, $high-light-area-bottom);
+  }
+}
+
+// lead
+.btn-lead {
+  display: inline-flex;
+  padding-left: $btn-padding-lead-left;
+  padding-right: $btn-padding-lead-right;
+  .lead-child-box {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
+  &.btn-work-default {
+    @include button-style(
+      $btn-background-primary,
+      $words-normal,
+      $btn-background-hover,
+      $words-normal,
+      $btn-background-active
+    );
+  }
+
+  &.btn-work-high-light {
+    @include button-style(
+      $btn-background-primary,
+      $words-normal,
+      $btn-background-hover,
+      $words-normal,
+      $btn-background-active
+    );
   }
 }
 
