--- a/src/components/button/_style.scss
+++ b/src/components/button/_style.scss
@@ -69,12 +69,12 @@
   }
 }
 
+// loading
 .btn-loading .ant-btn-loading-icon {
   margin-right: 4px;
 }
 
 // primary
-
 .btn-primary {
   @include button-style(
     $btn-background-primary,
@@ -115,6 +115,9 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+  }
+  &.btn-icon-only {
+    padding-left: 6px;
   }
   &.btn-work-default {
     @include button-style(
@@ -172,41 +175,19 @@
   }
 }
 
-// .btn-danger {
-//   @include button-style($danger, $danger, $white);
-// }
-
-// .btn-default {
-//   @include button-style(
-//     $white,
-//     $gray-400,
-//     $body-color,
-//     $white,
-//     $primary,
-//     $primary
-//   );
-// }
-
-// .btn-link {
-//   font-weight: $font-weight-normal;
-//   color: $btn-link-color;
-//   text-decoration: $link-decoration;
-//   box-shadow: none;
-//   // :hover
-//   &:hover {
-//     color: $btn-link-hover-color;
-//     text-decoration: $link-hover-decoration;
-//   }
-//   // :foucus
-//   &:focus,
-//   &.focus {
-//     text-decoration: $link-hover-decoration;
-//     box-shadow: none;
-//   }
-//   // :disabled .disabled
-//   &:disabled,
-//   &.disabled {
-//     color: $btn-link-disabled-color;
-//     pointer-events: none;
-//   }
-// }
+// link
+.btn-link {
+  @include button-style(
+    $btn-background-link,
+    $link-color,
+    $btn-background-link-hover,
+    $link-hover-color,
+    $btn-background-link-active
+  );
+  text-decoration: $link-decoration;
+  padding: 0;
+  &:disabled,
+  &.disabled {
+    color: $link-disable-color;
+  }
+}
