--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -193,7 +193,7 @@ $btn-background-primary-active:  $btn-background-active !default;
 // type - lead
 $btn-padding-lead-y:               0px !default;
 $btn-padding-lead-left:            9px !default;
-$btn-padding-lead-right:           6px !default;
+$btn-padding-lead-right:           2px !default;
 
 // ----------------------------------------------------------------
 
@@ -213,18 +213,14 @@ $btn-border-width:               $border-width !default;
 
 // ----------------------------------------------------------------
 
-// // 链接按钮
-// $btn-link-color:              $link-color !default;
-// $btn-link-hover-color:        $link-hover-color !default;
-// $btn-link-disabled-color:     $gray-600 !default;
+// type - gray
+$btn-background-link:         transparent !default;
 
+// hover
+$btn-background-link-hover:   transparent !default;
 
-// // 按钮 radius
-// $btn-border-radius:           $border-radius !default;
-// $btn-border-radius-lg:        $border-radius-lg !default;
-// $btn-border-radius-sm:        $border-radius-sm !default;
-
-// $btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+// active
+$btn-background-link-active:  transparent  !default;
 
 // ----------------------------------------------------------------
 
