--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -224,7 +224,28 @@ $btn-background-link-active:  transparent  !default;
 
 // ----------------------------------------------------------------
 
-// Spacing
+// ----------------------------------------------------------------
+
+// ----------------------------------------------------------------
+
+//input
+
+$input-padding-y:                       0px !default;
+$input-padding-x:                       6px !default;
+$input-font-family:                     $font-family-base !default;
+$input-font-size:                       $font-size-base !default;
+$input-font-weight:                     500 !default;
+$input-line-height:                     22px !default;
+$input-border-radius:                   $border-radius !default;
+
+$input-background:                      #0C0F0E !default;
+$input-color:                           $words-supporting !default;
+$input-border:                          1px solid $basic-btn !default;
+
+$input-background-hover:                $btn-hover !default;
+
+$input-color-focus:                     $words-high-light !default;
+$input-border-focus:                    1px solid $words-high-light !default;
 
 // ----------------------------------------------------------------
 
