fix: input -> disabled

--- a/src/components/input/_style.scss
+++ b/src/components/input/_style.scss
@@ -135,6 +135,10 @@
       display: inline-block;
     }
   }
+  &.disabled,
+  &[disabled] {
+    cursor: not-allowed !important;
+  }
 }
 
 // clear-icon-active
