--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,3 +1,4 @@
+// button
 @mixin button-size($padding-y, $padding-x, $font-size, $border-raduis) {
   padding: $padding-y $padding-x;
   font-size: $font-size;
@@ -36,56 +37,6 @@
   }
 }
 
-// @mixin alert-style($background, $border, $color) {
-//   color: $color;
-//   background: $background;
-//   border-color: $border;
-// }
-
-// @mixin zoom-animation(
-//   $direction: 'top',
-//   $scaleStart: scaleY(0),
-//   $scaleEnd: scaleY(1),
-//   $origin: center top
-// ) {
-//   .zoom-in-#{$direction}-enter {
-//     opacity: 0;
-//     transform: $scaleStart;
-//   }
-//   .zoom-in-#{$direction}-enter-active {
-//     opacity: 1;
-//     transform: $scaleEnd;
-//     transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
-//       opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
-//     transform-origin: $origin;
-//   }
-//   .zoom-in-#{$direction}-exit {
-//     opacity: 1;
-//   }
-//   .zoom-in-#{$direction}-exit-active {
-//     opacity: 0;
-//     transform: $scaleStart;
-//     transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
-//       opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
-//     transform-origin: $origin;
-//   }
-// }
-
-// @mixin border-right-radius($raduis) {
-//   border-top-right-radius: $raduis;
-//   border-bottom-right-radius: $raduis;
-// }
-
-// @mixin border-left-radius($raduis) {
-//   border-top-left-radius: $raduis;
-//   border-bottom-left-radius: $raduis;
-// }
-
-// @mixin border-top-radius($raduis) {
-//   border-top-left-radius: $raduis;
-//   border-top-right-radius: $raduis;
-// }
-
 // ----------------------------------------------------------------
 
 // input
@@ -113,54 +64,76 @@
   $disabled-color,
   $disabled-border
 ) {
+  // input-style - normal ---------------------------------------------------------
+
   background: $background;
   color: $color;
   border: $border;
-
+  // normal style -> link clear icon style
   .anticon.ant-input-clear-icon-has-suffix,
   &.anticon.ant-input-clear-icon-has-suffix,
   .anticon.ant-input-clear-icon {
     color: $color;
     font-size: 10px;
   }
+
+  // placeholder style
   &::-webkit-input-placeholder {
     color: $color;
   }
   ::-webkit-input-placeholder {
     color: $color;
   }
+
+  // input-style - hover ---------------------------------------------------------
+
   &:hover {
-    .anticon.ant-input-clear-icon-has-suffix,
-    &.anticon.ant-input-clear-icon-has-suffix,
-    .anticon.ant-input-clear-icon {
-      color: $hover-color;
-    }
     color: $hover-color;
     background: $hover-background;
     border: $hover-border !important;
+
+    // hover input -> link icon hover
+    .anticon.ant-input-clear-icon-has-suffix,
+    &.anticon.ant-input-clear-icon-has-suffix,
+    .anticon.ant-input-clear-icon,
+    .ant-input-group-addon .ant-input-search-button {
+      color: $hover-color;
+    }
   }
+
+  // input-style - focus ---------------------------------------------------------
+
   &.ant-input-affix-wrapper-focused,
+  &.frc-input-active-start,
   &:focus {
+    // focus input -> link icon active
     .anticon.ant-input-clear-icon-has-suffix,
     &.anticon.ant-input-clear-icon-has-suffix,
     .anticon.ant-input-clear-icon,
     .ant-input-prefix,
-    .ant-input-suffix {
+    .ant-input-suffix,
+    .ant-input-affix-wrapper-focused
+      + .ant-input-group-addon
+      .ant-input-search-button {
       color: $words-normal !important;
     }
     border: $focus-border !important;
     color: $focus-color;
     outline: 0;
   }
+
+  // input-style - disabled ---------------------------------------------------------
+
   &.ant-input-affix-wrapper-disabled,
+  .ant-input-search .ant-input-affix-wrapper-disabled,
   &.disabled,
   &[disabled] {
     .ant-input {
-      cursor: not-allowed;
+      cursor: not-allowed !important;
     }
-    cursor: not-allowed;
-    color: $disabled-color;
-    background: $disabled-background;
+    cursor: not-allowed !important;
+    color: $disabled-color !important;
+    background: $disabled-background !important;
     border: $disabled-border !important;
     // follow
     &::-webkit-input-placeholder {
